[Fxi] fix code inject security issue [high level]